Status model for Product